Исправление замечаний Поправил SqlTracker, SqlTrackerTest