@@ -5,10 +5,12 @@ package ru.job4j.tracker.gc;
  * реализация
  * считаем обычный объект и объект без полей
  * предмет подсчета выделенные под данные объекты объемы памяти
+ * -XX:+UseG1GC -Xlog:gc*
  * @author Kolesnikov Evgeniy (evgeniysanich@mail.ru)
  * @version 1.0
  */
 
+import ru.job4j.tracker.model.Item;
 import ru.job4j.tracker.store.MemTracker;
 
 public class GCTest {
@@ -29,13 +31,14 @@ public class GCTest {
 
     public static void main(String[] args) {
         info();
-        for (int i = 0; i < 1000000; i++) {
-            new MemTracker();
+        MemTracker memTracker = new MemTracker();
+        for(int i = 1; i < 10000000; i++) {
+            memTracker.add(new Item(String.valueOf(i)));
         }
         //System.out.printf("Size of object without fields is %s%n", sizeOf(new MemTracker()));
         //System.out.printf("Size of object with fields is %s%n", sizeOf(new User("N5", 5, "SP5")));
-        //System.gc();
-        //info();
+        System.gc();
+        info();
     }
 }
 
